@@ -33,6 +33,8 @@
 #include "spa_comm.h"
 #include "utils.h"
 #include "getpasswd.h"
+#include <sys/stat.h>
+#include <fcntl.h>
 
 /* prototypes
 */
@@ -660,8 +662,7 @@ save_args(int argc, char **argv)
 {
     char args_save_file[MAX_PATH_LEN];
     char args_str[MAX_LINE_LEN] = "";
-    FILE *args_file_ptr = NULL;
-    int i = 0, args_str_len = 0;
+    int i = 0, args_str_len = 0, args_file_fd = -1;
 
 #ifdef WIN32
     /* Not sure what the right thing is here on Win32, just return
@@ -671,26 +672,31 @@ save_args(int argc, char **argv)
 #endif
 
     if (get_save_file(args_save_file)) {
-        if ((args_file_ptr = fopen(args_save_file, "w")) == NULL) {
+        args_file_fd = open(args_save_file, O_WRONLY|O_CREAT, S_IRUSR|S_IWUSR);
+        if (args_file_fd == -1) {
             fprintf(stderr, "Could not open args file: %s\n",
                 args_save_file);
             exit(EXIT_FAILURE);
         }
-        for (i=0; i < argc; i++) {
-            args_str_len += strlen(argv[i]);
-            if (args_str_len >= MAX_PATH_LEN) {
-                fprintf(stderr, "argument string too long, exiting.\n");
-                exit(EXIT_FAILURE);
+        else {
+            for (i=0; i < argc; i++) {
+                args_str_len += strlen(argv[i]);
+                if (args_str_len >= MAX_PATH_LEN) {
+                    fprintf(stderr, "argument string too long, exiting.\n");
+                    exit(EXIT_FAILURE);
+                }
+                strlcat(args_str, argv[i], MAX_PATH_LEN);
+                strlcat(args_str, " ", MAX_PATH_LEN);
             }
-            strlcat(args_str, argv[i], MAX_PATH_LEN);
-            strlcat(args_str, " ", MAX_PATH_LEN);
+            strlcat(args_str, "\n", MAX_PATH_LEN);
+            if(write(args_file_fd, args_str, strlen(args_str))
+                    != strlen(args_str)) {
+                fprintf(stderr,
+                "warning, did not write expected number of bytes to args save file\n");
+            }
+            close(args_file_fd);
         }
-        fprintf(args_file_ptr, "%s\n", args_str);
-        fclose(args_file_ptr);
     }
-
-    set_file_perms(args_save_file);
-
     return;
 }
 
